--- a/LAB3/workflows/pytest_action.yml
+++ b/LAB3/workflows/pytest_action.yml
@@ -32,7 +32,7 @@ jobs:
         python-version: 3.10
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r LAB3/requirements.txt
 
     - name: Run tests and generate XML report
       run: pytest --junitxml=pytest-report.xml
