moved workflows to .github/ and specified project folder to look for pushes and run tests

--- a/.github/workflows/pytest_action.yml
+++ b/.github/workflows/pytest_action.yml
@@ -22,6 +22,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./LAB3
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
