--- a/.github/workflows/unittest_action.yml
+++ b/.github/workflows/unittest_action.yml
@@ -10,7 +10,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./LAB3
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
